Updated syncing problems with jumping from topic to topic and fixed missing id on buttons

--- a/app/assets/stylesheets/desktop/homepage/topicboard.scss
+++ b/app/assets/stylesheets/desktop/homepage/topicboard.scss
@@ -5,6 +5,14 @@
 		margin-left: 25%;
 	}
 
+	.topic__container .static__label{
+		margin-left: 5%;
+	}
+
+	.topic__container .topic__description{
+		margin-left: 5%;
+	}
+
 	.topic__container .topic__header{
 		height: 10%;
 		margin-top: 2%;
